--- a/PEC 1.Rmd
+++ b/PEC 1.Rmd
@@ -27,7 +27,7 @@ library(SummarizedExperiment)
 library(readr)
 
 # Leer el archivo CSV
-data <- read_csv("C:\\Users\\merma\\OneDrive\\Escritorio\\MASTER BIOINFORMATICA\\analisis de datos omicos\\PEC1\\human_cachexia.csv")
+data <- read.csv("C:/Users/merma/OneDrive/Escritorio/MASTER BIOINFORMATICA/analisis de datos omicos/Gutiérrez -Martínez -Diana-PEC1/human_cachexia.csv")
 
 # Visualizar los primeros registros
 View(data)
