--- a/PEC 1.Rmd
+++ b/PEC 1.Rmd
@@ -7,47 +7,57 @@ date: "2025-03-26"
 
 ```{r}
 
-# Configuración de un mirror de CRAN y paquetes necesarios
-options(repos = c(CRAN = "https://cran.rstudio.com"))
+# Instalar y cargar los paquetes necesarios
 
-# Instalar paquetes necesarios
-install.packages(c("usethis", "BiocManager", "readr", "ggplot2", "dplyr", "patchwork", "GGally", "tidyr", "reshape2"))
-
+```{r}
 # Cargar las librerías necesarias
+install.packages("usethis")
 library(usethis)
-library(BiocManager)
+
+# Configurar GitHub remoto (opcional, solo si es necesario para tu proyecto)
+use_git_remote(url = "https://github.com/Dianaguma/Gutierrez_Martinez_Diana_PEC1/tree/main", overwrite = TRUE)
+
+# Seleccionar un mirror de CRAN
+chooseCRANmirror(graphics = FALSE, ind = 1)
+
+# Instalar y cargar BiocManager para paquetes de Bioconductor
+install.packages("BiocManager")
+BiocManager::install("SummarizedExperiment")
+
+# Instalar y cargar readr para manejo de archivos CSV
+install.packages("readr")
 library(SummarizedExperiment)
 library(readr)
-library(ggplot2)
-library(dplyr)
-library(patchwork)
-library(GGally)
-library(tidyr)
-library(reshape2)
 
-# Configuración de GitHub (solo si es necesario para tu proyecto)
-use_git_remote(url = "https://github.com/Dianaguma/Gutierrez_Mart-nez-_Diana_PEC1", overwrite = TRUE)
-
-# Leer los datos CSV desde la ruta especificada
+# Leer el archivo CSV con la ruta completa
 data <- read.csv("C:/Users/merma/OneDrive/Escritorio/MASTER BIOINFORMATICA/analisis de datos omicos/Gutiérrez -Martínez -Diana-PEC1/human_cachexia.csv")
 
-# Extraer los metadatos (Patient ID y Muscle loss)
+# Separar los metadatos (por ejemplo, Patient ID y Muscle loss)
 sample_data <- data[, c("Patient.ID", "Muscle.loss")]
 
-# Convertir "Muscle.loss" a factor
+View(data)
+
+# Convertir "Muscle_loss" en factor
 sample_data$Muscle.loss <- factor(sample_data$Muscle.loss)
 
 # Eliminar filas con NA en los metadatos
 sample_data <- sample_data[complete.cases(sample_data), ]
 
-# Extraer los datos experimentales (metabolitos)
-exp_data <- data[, -(1:2)]  # Eliminamos las dos primeras columnas (metadatos)
+# Separar los datos experimentales (mediciones de metabolitos)
+exp_data <- data[, -(1:2)]  # Eliminamos las primeras dos columnas (metadatos)
 
-# Convertir los datos experimentales a una matriz
+# Convertir los datos experimentales a matriz
 data_matrix <- as.matrix(exp_data)
 
-# Verificar y asignar los nombres de las filas (Patient.ID)
+print(data_matrix)
+
+# matriz o conjunto de datos que lista varios metabolitos o compuestos bioquímicos junto con sus concentraciones correspondientes. Cada fila representa una muestra, y cada columna corresponde a un metabolito diferente. Los valores en la tabla representan los niveles de concentración de cada metabolito en cada muestra. El conjunto de datos parece contener muchos metabolitos involucrados en diferentes vías metabólicas, como aminoácidos, ácidos orgánicos y otros compuestos bioquímicos. Estos compuestos pueden ser importantes para estudios relacionados con el metabolismo, la bioquímica o cualquier área donde el perfil metabólico sea relevante.
+
+# Verificar que los nombres de fila están vacíos o incorrectos
 if (is.null(rownames(data_matrix)) || length(rownames(data_matrix)) == 0) {
+  cat("Asignando los nombres de fila a data_matrix...\n")
+  
+  # Comprobamos que los IDs en sample_data coinciden con las filas de data_matrix
   if (length(sample_data$Patient.ID) == nrow(data_matrix)) {
     rownames(data_matrix) <- sample_data$Patient.ID
   } else {
@@ -55,19 +65,47 @@ if (is.null(rownames(data_matrix)) || length(rownames(data_matrix)) == 0) {
   }
 }
 
-# Eliminar duplicados en los metadatos y en las filas de la matriz
+# Verificar los nombres de las filas
+cat("Comprobando los nombres de fila...\n")
+print(head(rownames(data_matrix)))  # Muestra los primeros nombres de fila
+
+# > print(head(rownames(data_matrix)))  # Muestra los primeros nombres de fila[1] "PIF_178"     "PIF_087"     "PIF_090"     "NETL_005_V1" "PIF_115"     "PIF_110"  
+
+
+
+# Verificar si hay duplicados en Patient.ID y eliminarlos
 sample_data <- sample_data[!duplicated(sample_data$Patient.ID), ]
 data_matrix <- data_matrix[!duplicated(rownames(data_matrix)), ]
 
-# Asegurarse de que los IDs de las muestras coinciden entre sample_data y data_matrix
+# Asegurar que solo se mantienen IDs comunes entre sample_data y data_matrix
 common_ids <- intersect(sample_data$Patient.ID, rownames(data_matrix))
+
+# Filtrar ambas estructuras para mantener solo las IDs en común
 sample_data <- sample_data[sample_data$Patient.ID %in% common_ids, ]
 data_matrix <- data_matrix[rownames(data_matrix) %in% common_ids, ]
 
-# Reordenar las filas para asegurarse de que están alineadas
+# Asegurar que las filas en data_matrix y sample_data están alineadas
+cat("Alineando filas de data_matrix y sample_data...\n")
+
+# Usamos match para encontrar las filas en el orden correcto
 order_indices <- match(sample_data$Patient.ID, rownames(data_matrix))
+
+# Verificar si todos los IDs de sample_data están presentes en rownames(data_matrix)
+if (any(is.na(order_indices))) {
+  cat("Advertencia: Algunos Patient.ID de sample_data no están presentes en rownames(data_matrix).\n")
+}
+
+# Reordenar ambas estructuras según el índice obtenido con match
 data_matrix <- data_matrix[order_indices, ]
 sample_data <- sample_data[order_indices, ]
+
+# Verificar nuevamente las dimensiones
+cat("Dimensiones de sample_data:", dim(sample_data), "\n")
+# Dimensiones de la sample_data 77 y 2
+
+cat("Dimensiones de data_matrix:", dim(data_matrix), "\n")
+
+#Dimensiones de data_matrix: 77 63
 
 # Crear el objeto SummarizedExperiment
 se <- SummarizedExperiment(
@@ -75,147 +113,119 @@ se <- SummarizedExperiment(
   colData = sample_data
 )
 
-# Guardar el objeto SummarizedExperiment
+# Ver el objeto SummarizedExperiment
+se
+
+
+# Resultado al mostrar el summarizedExperiment: 
+# class: SummarizedExperiment 
+#dim: 63 63 
+#metadata(0):
+#assays(1): counts
+#rownames(63): PIF_178 PIF_087 ... NETCR_008_V1 NETCR_008_V2
+#rowData names(1): MuscleLoss
+#colnames(63): 1,6-Anhydro-beta-D-glucose 1-Methylnicotinamide ...
+#  pi-Methylhistidine tau-Methylhistidine
+#colData names(2): Patient ID Muscle loss
+
 save(se, file = "C:/Users/merma/OneDrive/Escritorio/MASTER BIOINFORMATICA/analisis de datos omicos/Gutiérrez -Martínez -Diana-PEC1/SummarizedExperiment_Diana_Gutiérrez.rda")
 
-# Análisis exploratorio de los datos
-# Ver los metadatos
+# Así agrego un archivo Rda que agregaré a github de los summarizedExperiment
+
+url <- "https://github.com/Dianaguma/Gutierrez_Martinez_Diana_PEC1/raw/main/SummarizedExperiment_Diana_Guti%C3%A9rrez.rda"
+
+# Aqui tengo el archivo summarizedExperiment en el github con los demas archivos. 
+
+
+# 3. Llevad a cabo un análisis exploratorio que os proporcione una visión general del dataset en la línea de lo que hemos visto en las actividades de este reto
+
 colData(se)
 
-# Hacer un t.test
+# |                             **Patient ID**  | **Muscle loss** |
+# |----------------------------------------------|-----------------|
+# | 1,6-Anhydro-beta-D-glucose                   | cachexic        |
+# | 1-Methylnicotinamide                         | cachexic        |
+# | 2-Aminobutyrate                              | cachexic        |
+# | 2-Hydroxyisobutyrate                         | cachexic        |
+# | 2-Oxoglutarate                               | cachexic        |
+# | ...                                          | ...             |
+# | cis-Aconitate                                | control         |
+# | myo-Inositol                                 | control         |
+# | trans-Aconitate                              | control         |
+# | pi-Methylhistidine                           | control         |
+# | tau-Methylhistidine                          | control         |
 
-head(se)
+# Explicacion: Coldata:muestra los metadatos correspondientes a las columnas del objeto SummarizedExperiment, que en este caso contienen los IDs de pacientes y si estos pacientes presentan pérdida muscular (Muscle loss).
 
-muscle_loss <- colData(se)$Muscle.loss  # Esto debería estar alineado con las columnas de la matriz
+colnames(assays(se)$counts) # nombres de los metabolitos (columnas de los ensayos):nombres de las columnas de los datos experimentales (en este caso, las concentraciones de metabolitos u otros datos cuantitativos) almacenados dentro de un objeto SummarizedExperiment (se).
 
-# Separar los grupos 'control' y 'cachexic'
-control_group <- assays(se)$counts[, muscle_loss == "control"]  # Filtro por columnas
-case_group <- assays(se)$counts[, muscle_loss == "cachexic"]
+se$`Muscle loss`
 
-sample_data <- sample_data[match(rownames(assays(se)$counts), sample_data$Patient.ID), ]
+# Vamos a hacer analisis gráficos 
 
-head(sample_data$Muscle.loss)
+install.packages("ggplot2")     # Para visualización
+install.packages("dplyr")       # Para manipulación de datos
+install.packages("patchwork")   # Para combinar gráficos
+install.packages("GGally")      # Para análisis de correlación
 
-p_values <- apply(assays(se)$counts, 1, function(x) {
-  t.test(x[sample_data$Muscle.loss == "control"], x[sample_data$Muscle.loss == "cachexic"])$p.value
-})
+# Cargar librerías necesarias
+library(ggplot2)
+library(tidyr)
 
-head(p_values)
+# Calcular la correlación entre los metabolitos
 
-sorted_p_values <- sort(p_values)
+cor_matrix <- cor(data_matrix, use = "pairwise.complete.obs")
 
-print(sorted_p_values)
+print(cor_matrix)
 
-# Los p-valores son mayores que 0.05, no podemos rechazar la H0 (que afirma  que no hay diferencias entre los grupos). Por tanto, no encontramos evidencia suficiente para decir que los metabolitos analizados difieren significativamente entre los grupos de pacientes cachexicos y controles.
+# Resultado lo guardo para colocarlo en el github 
 
-# Calcular y ver la media de cada metabolito
+cor_matrix <- cor(data_matrix, use = "pairwise.complete.obs")
 
-mean_values <- apply(assays(se)$counts, 2, mean)
+# Guardar la matriz de correlación en la ruta específica
+write.csv(cor_matrix, "C:/Users/merma/OneDrive/Escritorio/MASTER BIOINFORMATICA/analisis de datos omicos/Gutiérrez -Martínez -Diana-PEC1/correlation_matrix.csv")
 
-sorted_mean_values_desc <- sort(mean_values, decreasing = TRUE)
+# la agrego en github. 
 
-head(sorted_mean_values_desc, 10)
+url <- "https://github.com/Dianaguma/Gutierrez_Martinez_Diana_PEC1/blob/main/correlation_matrix.csv"
 
-# Respuesta: La Creatinine tiene el valor más alto de concentración entre los metabolitos estudiados, con 9521.7754, seguido por Hippurate (2614.1479) y Citrate (2423.4689). Esto sugiere que la creatinina podría ser uno de los metabolitos más presentes en las muestras que estás analizando.
+# Visualizar la matriz de correlación
+library(reshape2)
 
-
-# Calcular la desviación estándar por metabolito
-sd_per_metabolite <- apply(assays(se)$counts, 2, sd)
-
-# Puedo hacer un t-test
-
-# Filtrar metabolitos con baja variabilidad (desviación estándar menor que 0.1)
-metabolite_sd <- apply(assays(se)$counts, 2, sd)
-se <- se[, metabolite_sd > 0.1]
-
-# Mapa de calor de la correlación entre metabolitos
-metabolite_data <- assay(se)  # Obtener los datos de los metabolitos
-cor_matrix <- cor(metabolite_data)
-
-# Convertir la matriz de correlación a formato largo para ggplot
+# Convertir la matriz de correlación a formato largo
 cor_data <- melt(cor_matrix)
 
-# Crear el mapa de calor usando ggplot2
+
+# Mapa de calor de la correlación entre metabolitos
 ggplot(cor_data, aes(Var1, Var2, fill = value)) +
   geom_tile() +
   scale_fill_gradient2(low = "blue", high = "red", mid = "white", 
                        midpoint = 0, limit = c(-1, 1), space = "Lab", 
                        name = "Correlación") +
   theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1)) +
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, 
+                                   hjust = 1)) +
   labs(title = "Mapa de calor de la correlación entre metabolitos",
        x = "Metabolito", 
        y = "Metabolito")
 
-# Guardar el mapa de calor como archivo PNG
-ggsave("C:/Users/merma/OneDrive/Escritorio/heatmap.png")
+![Mapa de calor](https://github.com/Dianaguma/Gutierrez_Martinez_Diana_PEC1/blob/main/heatmap.png)
 
-# PCA (Análisis de Componentes Principales) para explorar la variabilidad de los datos
-pca_result <- prcomp(t(assays(se)$counts), scale = TRUE)
-summary(pca_result)  # Ver el resumen de las componentes principales
+# Ver la distribución de las categorías de "Muscle.loss"
+table(sample_data$Muscle.loss)
 
-# Graficar los primeros dos componentes principales (PC1 vs PC2)
-pca_scores <- pca_result$x
-pca_scores_df <- data.frame(pca_scores)
+library(ggplot2)
 
-ggplot(pca_scores_df, aes(x = PC1, y = PC2)) +
-  geom_point() +
-  labs(title = "PCA: PC1 vs PC2", x = "PC1", y = "PC2") +
+ggplot(sample_data, aes(x = Muscle.loss)) +
+  geom_bar(fill = "skyblue", color = "black") +
+  labs(title = "Distribución de muestras por grupo", x = "Grupo", y = "Frecuencia") +
   theme_minimal()
 
-# Guardar el gráfico PCA como archivo PNG
-ggsave("C:/Users/merma/OneDrive/Escritorio/pca_plot.png")
-
-# Extraer la varianza explicada por cada componente principal
-varianza_explicada <- pca_result$sdev^2 / sum(pca_result$sdev^2)
-varianza_acumulada <- cumsum(varianza_explicada)
-
-# Crear un data frame con la varianza explicada y acumulada
-varianza_df <- data.frame(PC = paste0("PC", 1:length(varianza_explicada)),
-                          Varianza_Explicada = varianza_explicada,
-                          Varianza_Acumulada = varianza_acumulada)
-
-# Graficar varianza explicada y acumulada
-ggplot(varianza_df, aes(x = PC)) +
-  geom_bar(aes(y = Varianza_Explicada), stat = "identity", fill = "blue", alpha = 0.6) +
-  geom_line(aes(y = Varianza_Acumulada * max(varianza_explicada), group = 1), color = "red", linewidth = 1) + 
-  geom_point(aes(y = Varianza_Acumulada * max(varianza_explicada), group = 1), color = "red") + 
-  labs(title = "Varianza Explicada y Acumulada por los Componentes Principales",
-       x = "Componente Principal",
-       y = "Proporción de Varianza / Acumulada") +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
-  scale_y_continuous(sec.axis = sec_axis(~./max(varianza_explicada), name = "Proporción Acumulada")) +
-  theme_minimal()
-
-# Guardar el gráfico de varianza explicada
-ggsave("C:/Users/merma/OneDrive/Escritorio/varianza_explicada.png", width = 10, height = 6, dpi = 300)
-
-# Exportar los resultados del PCA a un archivo CSV
-write.csv(pca_scores_df, file = "C:/Users/merma/OneDrive/Escritorio/pca_scores.csv")
-
-#Puedo mirar rutas metabolicas
-
-# Instalar paquetes para KEGG
-BiocManager::install("KEGGREST")
-
-install.packages("igraph")  # Instalar el paquete
-library(igraph)  # Cargar el paquete
-
-
-# Definir los umbrales de correlación
-threshold <- 0.7
-cor_matrix_filtered <- cor_matrix
-cor_matrix_filtered[abs(cor_matrix_filtered) < threshold] <- 0
-
-# Crear un grafico de la matriz de correlación
-g <- graph_from_adjacency_matrix(cor_matrix_filtered, weighted = TRUE, mode = "undirected")
-plot(g, vertex.label = rownames(cor_matrix), vertex.size = 5, edge.width = E(g)$weight * 5)
-
-png("C:/Users/merma/OneDrive/Escritorio/grafico_correlacion.png", width = 800, height = 800)
-plot(g, vertex.label = rownames(cor_matrix_filtered), vertex.size = 5, edge.width = E(g)$weight * 5)
-dev.off() 
+# No es distribución homogenea. 
 
 ```
+
+
 
 ![Heatmap](C:/Users/merma/OneDrive/Escritorio/heatmap.png)
 ![Varianza explicada](C:/Users/merma/OneDrive/Escritorio/varianza_explicada.png)
